resutls fix
horizontal scroll

--- a/2020/scss/custom.scss
+++ b/2020/scss/custom.scss
@@ -757,6 +757,7 @@ footer {
         left: 40px;
         text-align: left;
         background-color: transparent;
+        width:auto;
     }
 }
 
